--- a/Dist-C2/index.html
+++ b/Dist-C2/index.html
@@ -37,7 +37,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link link0">Home<span class="sr-only">(current)</span></a>
+                <a class="nav-link link5">Home<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link link1">Quem somos</a>
@@ -46,30 +46,46 @@
                 <a class="nav-link link2">Produtos</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link link3">Nossos clientes</a>
+                <a class="nav-link link3">Nossos Parceiros</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link link4">Entre em contato!</a>
+                <a class="nav-link link4">Contato</a>
             </li>
     </div>
 </nav>
 
+<!--Hero-->
+<!--
+<section class="home hero">
+    <div class="hero-text">
+        <h1>Somos a Espaço Qua<span class="orange">tt</span>ro</h1>
+        <br>
+        <button class="rounded link5">Conheça-nos</button>
+      </div>
+</section>
+-->
 
 <main class="container-fluid">
 
-    <section class="margin area1">
+    <section class="area1">
         <div class="row">
-        <h1 class="text-center text-uppercase col-md-12">Quem somos?</h1>
+        <h1 class="text-uppercase col-md-12">Quem somos?</h1>
         </div>
-        <p class="text-justify text-center">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum adipisci eos, ipsum, veritatis nemo rerum non obcaecati facere deleniti quos molestias impedit. Quae, sapiente sequi soluta nemo nostrum eligendi ullam.</p>
+        <div class="row">
+            <picture class="col-md-6">
+            <img src="https://via.placeholder.com/400.png" class="img-fluid rounded">
+            </picture>
+
+            <p class="text-justify col-md-6">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum adipisci eos, ipsum, veritatis nemo rerum non obcaecati facere deleniti quos molestias impedit. Quae, sapiente sequi soluta nemo nostrum eligendi ullam.</p>
+        </div>
     </section>
 
     <hr>
 
     <section class="area2">
-    <h1 class="text-center text-uppercase">Nossos produtos</h1>
+    <h1 class=" text-uppercase">Nossos produtos</h1>
     <br>
-    <div class="row text-center">
+    <div class="row ">
 
         <div class="col-sm-3 product-box">
             <h3>Divisórias</h3>
@@ -86,25 +102,106 @@
     </div>
     </section>
     <hr>
-    <section class="margin area3">
+
+    <section class=" area3">
         <div class="row">
-        <h1 class="text-center text-uppercase col-md-12">Parceiros</h1>
+        <h1 class=" text-uppercase col-md-12">Parceiros</h1>
         </div>
-        <p class="text-justify text-center">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum adipisci eos, ipsum, veritatis nemo rerum non obcaecati facere deleniti quos molestias impedit. Quae, sapiente sequi soluta nemo nostrum eligendi ullam.</p>
+    <!--Bootstrap Carroussel parceiros-->
+    <div id="carouselExample" class="carousel slide" data-ride="carousel" data-interval="9000">
+            <div class="carousel-inner row w-100 mx-auto" role="listbox">
+                <div class="carousel-item col-md-3  active">
+                   <div class="panel panel-default">
+                      <div class="panel-thumbnail">
+                        <a href="#" title="image 1" class="thumb">
+                          <img class="img-fluid mx-auto d-block" src="https://via.placeholder.com/400.png" alt="slide 1">
+                        </a>
+                      </div>
+                    </div>
+                </div>
+                <div class="carousel-item col-md-3 ">
+                   <div class="panel panel-default">
+                      <div class="panel-thumbnail">
+                        <a href="#" title="image 3" class="thumb">
+                         <img class="img-fluid mx-auto d-block" src="https://via.placeholder.com/400.png" alt="slide 2">
+                        </a>
+                      </div>
+                    </div>
+                </div>
+                <div class="carousel-item col-md-3 ">
+                   <div class="panel panel-default">
+                      <div class="panel-thumbnail">
+                        <a href="#" title="image 4" class="thumb">
+                         <img class="img-fluid mx-auto d-block" src="https://via.placeholder.com/400.png" alt="slide 3">
+                        </a>
+                      </div>
+                    </div>
+                </div>
+                <div class="carousel-item col-md-3 ">
+                    <div class="panel panel-default">
+                      <div class="panel-thumbnail">
+                        <a href="#" title="image 5" class="thumb">
+                         <img class="img-fluid mx-auto d-block" src="https://via.placeholder.com/400.png" alt="slide 4">
+                        </a>
+                      </div>
+                    </div>
+                </div>
+                <div class="carousel-item col-md-3 ">
+                  <div class="panel panel-default">
+                      <div class="panel-thumbnail">
+                        <a href="#" title="image 6" class="thumb">
+                          <img class="img-fluid mx-auto d-block" src="https://via.placeholder.com/400.png" alt="slide 5">
+                        </a>
+                      </div>
+                    </div>
+                </div>
+                <div class="carousel-item col-md-3 ">
+                   <div class="panel panel-default">
+                      <div class="panel-thumbnail">
+                        <a href="#" title="image 7" class="thumb">
+                          <img class="img-fluid mx-auto d-block" src="https://via.placeholder.com/400.png" alt="slide 6">
+                        </a>
+                      </div>
+                    </div>
+                </div>
+                <div class="carousel-item col-md-3 ">
+                   <div class="panel panel-default">
+                      <div class="panel-thumbnail">
+                        <a href="#" title="image 8" class="thumb">
+                          <img class="img-fluid mx-auto d-block" src="https://via.placeholder.com/400.png" alt="slide 7">
+                        </a>
+                      </div>
+                    </div>
+                </div>
+                 <div class="carousel-item col-md-3  ">
+                    <div class="panel panel-default">
+                      <div class="panel-thumbnail">
+                        <a href="#" title="image 2" class="thumb">
+                         <img class="img-fluid mx-auto d-block" src="https://via.placeholder.com/400.png" alt="slide 8">
+                        </a>
+                      </div>
+                      
+                    </div>
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExample" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next text-faded" href="#carouselExample" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+
     </section>
+
     <hr>
-    <section class="margin area4">
+    <section>
         <div class="row">
-        <h1 class="text-center text-uppercase col-md-12">Acompanhe</h1>
+        <h1 class="text-uppercase col-md-12">Atas</h1>
         </div>
-        <p class="text-justify text-center">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum adipisci eos, ipsum, veritatis nemo rerum non obcaecati facere deleniti quos molestias impedit. Quae, sapiente sequi soluta nemo nostrum eligendi ullam.</p>
-    </section>
-    <hr>
-    <section class="margin">
-        <div class="row">
-        <h1 class=" text-center text-uppercase col-md-12">Atas</h1>
-        </div>
-        <p class="text-justify text-center">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum adipisci eos, ipsum, veritatis nemo rerum non obcaecati facere deleniti quos molestias impedit. Quae, sapiente sequi soluta nemo nostrum eligendi ullam.</p>
+        <p class="text-justify ">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum adipisci eos, ipsum, veritatis nemo rerum non obcaecati facere deleniti quos molestias impedit. Quae, sapiente sequi soluta nemo nostrum eligendi ullam.</p>
     </section>
 </main>
 
@@ -121,11 +218,11 @@
             <br>
             Telefone / Whatsapp: (83) 4141-3320 / (83) 99691-2442
             <br>
-            <a href="mailto:contato@espacoquattro.com.br">contato@espacoquattro.com.br</a></p>
+            <a href="mailto:contato@c2comercio.com">contato@c2comercio.com</a></p>
         </address>
 
         <div class="col-6 links">
-            <a href="https://www.instagram.com/c2distribuidora/?hl=en" target="_blank"><i class="fab fa-instagram fa-4x text-center" alt="Link para o Instagram"></i></a>
+            <a href="https://www.instagram.com/c2distribuidora/?hl=en" target="_blank"><i class="fab fa-instagram fa-4x " alt="Link para o Instagram"></i></a>
         </div>
         <div class="float-right col-6"><a href="https://www.mirandacomunicacao.com.br/" target="_blank"><img src="imgs/logoMiranda.png" class="float-right img-fluid" alt="Link e logomarca da Miranda Comunicações"></a></div>
         <p class="col-md-12 black-bar">©2018 C2 DISTRIBUIDORA - TODOS OS DIREITOS RESERVADOS</p>
