Se texto. Cansaaaado

--- a/Dist-C2/index.html
+++ b/Dist-C2/index.html
@@ -37,19 +37,19 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-                <a class="nav-link link5">Home<span class="sr-only">(current)</span></a>
+                <a class="nav-link link5"><i class="fas fa-home"></i> Home<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link link1">Quem somos</a>
+                <a class="nav-link link1"><i class="fas fa-users"></i> Quem somos</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link link2">Produtos</a>
+                <a class="nav-link link2"><i class="fas fa-clipboard-list"></i> Produtos</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link link3">Nossos Parceiros</a>
+                <a class="nav-link link3"><i class="far fa-handshake"></i> Nossos Parceiros</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link link4">Contato</a>
+                <a class="nav-link link4"><i class="fas fa-bullhorn"></i> Contato</a>
             </li>
     </div>
 </nav>
@@ -73,7 +73,7 @@
         </div>
         <div class="row">
             <picture class="col-md-6">
-            <img src="https://via.placeholder.com/400.png" class="img-fluid rounded">
+            <img src="imgs/quemsomos.jpeg" class="img-fluid rounded">
             </picture>
 
             <p class="text-justify col-md-6">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum adipisci eos, ipsum, veritatis nemo rerum non obcaecati facere deleniti quos molestias impedit. Quae, sapiente sequi soluta nemo nostrum eligendi ullam.</p>
@@ -86,7 +86,6 @@
     <h1 class=" text-uppercase">Nossos produtos</h1>
     <br>
     <div class="row ">
-
         <div class="col-sm-3 product-box">
             <h3>Divisórias</h3>
         </div>
@@ -98,6 +97,20 @@
         </div>
         <div class="col-sm-3 product-box">
             <h3>Drywall</h3>
+        </div>
+    </div>
+    <div class="row ">
+        <div class="col-sm-3 product-box">
+            <h3>Portas</h3>
+        </div>
+        <div class="col-sm-3 product-box">
+            <h3>Painel Wall</h3>
+        </div>
+        <div class="col-sm-3 product-box">
+            <h3>Persianas</h3>
+        </div>
+        <div class="col-sm-3 product-box">
+            <h3>Rodapé</h3>
         </div>
     </div>
     </section>
@@ -207,7 +220,7 @@
 
 <footer class="row area4" id="footer">
 
-        <address class="col-md-12">
+        <address class="col-6">
             <p>C2 Distribuidora
             <br>
             BR 230 km 11,5
@@ -223,8 +236,8 @@
 
         <div class="col-6 links">
             <a href="https://www.instagram.com/c2distribuidora/?hl=en" target="_blank"><i class="fab fa-instagram fa-4x " alt="Link para o Instagram"></i></a>
+            <a href="https://www.mirandacomunicacao.com.br/" target="_blank"><img src="imgs/logoMiranda.png" class="float-right img-fluid" alt="Link e logomarca da Miranda Comunicações"></a>
         </div>
-        <div class="float-right col-6"><a href="https://www.mirandacomunicacao.com.br/" target="_blank"><img src="imgs/logoMiranda.png" class="float-right img-fluid" alt="Link e logomarca da Miranda Comunicações"></a></div>
         <p class="col-md-12 black-bar">©2018 C2 DISTRIBUIDORA - TODOS OS DIREITOS RESERVADOS</p>
 </footer>
 
