--- a/Dist-C2/index.html
+++ b/Dist-C2/index.html
@@ -55,61 +55,71 @@
 </nav>
 
 <!--Hero-->
-<!--
 <section class="home hero">
     <div class="hero-text">
-        <h1>Somos a Espaço Qua<span class="orange">tt</span>ro</h1>
+        <h1>Seja bem-vindo</h1>
         <br>
         <button class="rounded link5">Conheça-nos</button>
       </div>
 </section>
--->
 
-<main class="container-fluid">
-
+<main>
+    <div class="container-fluid">
+    <hr>
     <section class="area1">
         <div class="row">
-        <h1 class="text-uppercase col-md-12">Quem somos?</h1>
+            <h1 class="text-uppercase col-md-12">Quem somos?</h1>
         </div>
         <div class="row">
             <picture class="col-md-6">
             <img src="imgs/quemsomos.jpeg" class="img-fluid rounded">
             </picture>
 
-            <p class="text-justify col-md-6">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum adipisci eos, ipsum, veritatis nemo rerum non obcaecati facere deleniti quos molestias impedit. Quae, sapiente sequi soluta nemo nostrum eligendi ullam.</p>
+            <div class="text-justify col-md-6">
+                <p>
+                    No mercado desde 2009, somos especializados no ramo de licitações públicas. 
+                    Atualmente, agregamos aos nossos negócios a distribuiçãoo de produtos para revestimentos de
+                    ambientes públicos e privados. Buscamos atender todas as necessidades de nossos clientes, 
+                    desde a elaboração do projeto até a sua venda e instalação final. 
+                    Seja muito bem vindo!
+                </p>
+                <h3><i class="fas fa-angle-right"></i> Missão</h3>
+                <p>Atuar no mercado de forma ética, com preços competitivos e atender todo
+                    o Estado com pontualidade e satisfação.</p>
+                <h3><i class="fas fa-angle-right"></i> Visão</h3>
+                <p>Ser a maior distribuidora de produtos especializados em revestimento e
+                    acabamentos para área pública, privada e corporativa do Estado da Paraíba</p>
+            </div>
         </div>
     </section>
 
     <hr>
 
     <section class="area2">
-    <h1 class=" text-uppercase">Nossos produtos</h1>
-    <br>
+    <h1 class="text-uppercase">Nossos produtos</h1>
     <div class="row ">
-        <div class="col-sm-3 product-box">
+        <div class="col-md-3 col-sm-4 col-xs-6 product-box">
             <h3>Divisórias</h3>
         </div>
-        <div class="col-sm-3 product-box">
+        <div class="col-md-3 col-sm-4 col-xs-6 product-box">
             <h3>Forros</h3>
         </div>
-        <div class="col-sm-3 product-box">
+        <div class="col-md-3 col-sm-4 col-xs-6 product-box">
             <h3>Pisos</h3>
         </div>
-        <div class="col-sm-3 product-box">
+        <div class="col-md-3 col-sm-4 col-xs-6 product-box">
             <h3>Drywall</h3>
         </div>
-    </div>
-    <div class="row ">
-        <div class="col-sm-3 product-box">
+        <div class="col-md-3 col-sm-4 col-xs-6 product-box">
             <h3>Portas</h3>
         </div>
-        <div class="col-sm-3 product-box">
+        <div class="col-md-3 col-sm-4 col-xs-6 product-box">
             <h3>Painel Wall</h3>
         </div>
-        <div class="col-sm-3 product-box">
+        <div class="col-md-3 col-sm-6 col-xs-6 product-box">
             <h3>Persianas</h3>
         </div>
-        <div class="col-sm-3 product-box">
+        <div class="col-md-3 col-sm-6 col-xs-6 product-box">
             <h3>Rodapé</h3>
         </div>
     </div>
@@ -216,36 +226,45 @@
         </div>
         <p class="text-justify ">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum adipisci eos, ipsum, veritatis nemo rerum non obcaecati facere deleniti quos molestias impedit. Quae, sapiente sequi soluta nemo nostrum eligendi ullam.</p>
     </section>
+    </div>
 </main>
 
 <footer class="row area4" id="footer">
 
-        <address class="col-6">
-            <p>C2 Distribuidora
+        <address class="col-md-6 text-center">
+            <i class="fas fa-map-marker-alt"></i>
+            <p>BR 230 km 11,5 - Jardim America<br>
+            CEP: 58102-542 - Cabedelo - PB<br>
+            Fone: (83) 4141-3320</p>
             <br>
-            BR 230 km 11,5
-            <br>
-            Jardim America, Cabedelo/PB
-            <br>
-            CEP: 58102-542
-            <br>
-            Telefone / Whatsapp: (83) 4141-3320 / (83) 99691-2442
-            <br>
-            <a href="mailto:contato@c2comercio.com">contato@c2comercio.com</a></p>
+            <h5><i class="fab fa-whatsapp"></i> (83) 99691-2442</h5>
+            <h5><i class="fas fa-envelope"></i> <a href="mailto:contato@c2comercio.com" alt="Link para o email da Distribuidora C2">contato@c2comercio.com</a></p></h5>
+            <h5><a href="https://www.instagram.com/c2distribuidora/?hl=en" target="_blank"><i class="fab fa-instagram" alt="Link para o Instagram"></i>Acompanhe-nos no Instagram!</a></h5>
         </address>
 
-        <div class="col-6 links">
-            <a href="https://www.instagram.com/c2distribuidora/?hl=en" target="_blank"><i class="fab fa-instagram fa-4x " alt="Link para o Instagram"></i></a>
-            <a href="https://www.mirandacomunicacao.com.br/" target="_blank"><img src="imgs/logoMiranda.png" class="float-right img-fluid" alt="Link e logomarca da Miranda Comunicações"></a>
+        <div class="col-md-6">
+            <div id="map"></div>
+            <script>
+                function initMap() {
+                    var C2 = {lat: -7.063577, lng: -34.850108};
+                    var map = new google.maps.Map(
+                        document.getElementById('map'), {zoom: 12, center: C2});
+                    var marker = new google.maps.Marker({position: C2, map: map});
+                }
+            </script>
         </div>
-        <p class="col-md-12 black-bar">©2018 C2 DISTRIBUIDORA - TODOS OS DIREITOS RESERVADOS</p>
+        <div class="col-md-12 black-bar"><a href="https://www.mirandacomunicacao.com.br/" target="_blank"><img src="imgs/logoMiranda.png" alt="Link e logomarca da Miranda Comunicações"></a></div>
 </footer>
 
-    <!--Bootstrap Js CDN-->
+<!--Bootstrap Js CDN-->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+<!--Google maps API Js-->
+    <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB1dHlq6dYlYyifNYkNY2dChGueZAzHE7Q&callback=initMap">
+    </script>
     <script type="text/javascript" src="controller.js"></script>
-    <!--Website made by coffee and this dude: https://github.com/juanpeter-->
+<!--Website made by coffee and this dude: https://github.com/juanpeter-->
 </body>
 </html>
