--- a/Dist-C2/index.html
+++ b/Dist-C2/index.html
@@ -130,7 +130,9 @@
         </div>
         <div class="row">
             <div class="col-md-3 col-6">
-                <img class="img-fluid" src="imgs/eucatex.png" alt="Logo e link da empresa Eucatex">
+                <a href="http://www.eucatex.com.br/pt/" target="blank">
+                    <img class="img-fluid" src="imgs/eucatex.png" alt="Logo e link da empresa Eucatex">
+                </a>
             </div>
             <div class="col-md-3 col-6">
                 <a href="https://www.trademixx.com.br/" target="blank">
