--- a/Dist-C2/index.html
+++ b/Dist-C2/index.html
@@ -16,7 +16,7 @@
 <!--Mudar keywords!-->
     <meta name="keywords" content="Material de construção, construção, distribuidora">
 <!--Google Fonts CDN-->
-    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet">
 <!--Bootstrap CSS CDN-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">    
 <!--Fontawesome CSS CDN-->
@@ -57,7 +57,7 @@
 <!--Hero-->
 <section class="home hero">
     <div class="hero-text">
-        <button class="rounded link1">Conheça-nos</button>
+        <button class="rounded link1"> Conheça-nos <i class="fas fa-angle-down"></i></button>
       </div>
 </section>
 
@@ -76,7 +76,7 @@
             <div class="text-justify col-md-6">
                 <p>
                     No mercado desde 2009, somos especializados no ramo de licitações públicas. 
-                    Atualmente, agregamos aos nossos negócios a distribuiçãoo de produtos para revestimentos de
+                    Atualmente, agregamos aos nossos negócios a distribuição de produtos para revestimentos de
                     ambientes públicos e privados. Buscamos atender todas as necessidades de nossos clientes, 
                     desde a elaboração do projeto até a sua venda e instalação final. 
                     Seja muito bem vindo!
@@ -92,72 +92,19 @@
     </section>
 
     <hr>
-
     <section class="area2">
     <h1 class="text-uppercase">Nossos produtos</h1>
-    <div class="row ">
-        <div class="col-md-3 col-sm-4 col-xs-6 product-box">
-            <h3>Divisórias</h3>
-        </div>
-        <div class="col-md-3 col-sm-4 col-xs-6 product-box">
-            <h3>Forros</h3>
-        </div>
-        <div class="col-md-3 col-sm-4 col-xs-6 product-box">
-            <h3>Pisos</h3>
-        </div>
-        <div class="col-md-3 col-sm-4 col-xs-6 product-box">
-            <h3>Drywall</h3>
-        </div>
-        <div class="col-md-3 col-sm-4 col-xs-6 product-box">
-            <h3>Portas</h3>
-        </div>
-        <div class="col-md-3 col-sm-4 col-xs-6 product-box">
-            <h3>Painel Wall</h3>
-        </div>
-        <div class="col-md-3 col-sm-6 col-xs-6 product-box">
-            <h3>Persianas</h3>
-        </div>
-        <div class="col-md-3 col-sm-6 col-xs-6 product-box">
-            <h3>Rodapé</h3>
-        </div>
-    </div>
-    </section>
-    <hr>
-
-    <section class="area3">
-        <div class="row">
-        <h1 class=" text-uppercase col-md-12">Parceiros</h1>
-        </div>
-        <div class="row">
-            <div class="col-md-3 col-6">
-                <a href="http://www.eucatex.com.br/pt/" target="blank">
-                    <img class="img-fluid" src="imgs/eucatex.png" alt="Logo e link da empresa Eucatex">
-                </a>
-            </div>
-            <div class="col-md-3 col-6">
-                <a href="https://www.trademixx.com.br/" target="blank">
-                    <img class="img-fluid" src="imgs/armstrong.jpg" alt="Logo e link da empresa Armstrong">
-                </a>
-            </div>
-            <div class="col-md-3 col-6">
-                <a href="https://www.trademixx.com.br/" target="blank">
-                    <img class="img-fluid" src="imgs/trademixx.png" alt="Logo e link da empresa Trademixx">
-                </a>
-            </div>
-            <div class="col-md-3 col-6">
-                <a href="http://www.persianasreal.com.br/index.php?opcao=empresa" target="blank">
-                    <img class="img-fluid" src="imgs/real-persianas.png" alt="Logo e link da empresa Real Persianas">
-                </a>
-            </div>
-        </div>
-    <!--Bootstrap Carroussel parceiros
+    <!--Bootstrap Carroussel parceiros-->
     <div id="carouselExample" class="carousel slide" data-ride="carousel" data-interval="9000">
             <div class="carousel-inner row w-100 mx-auto" role="listbox">
-                <div class="carousel-item col-md-3  active">
+                <div class="carousel-item col-md-3 active">
                    <div class="panel panel-default">
                       <div class="panel-thumbnail">
-                        <a href="#" title="image 1" class="thumb">
-                          <img class="img-fluid mx-auto d-block" src="imgs/eucatex.png" alt="slide 1">
+                        <a href="#" title="Drywall" class="thumb">
+                          <img class="img-fluid mx-auto d-block" src="imgs/drywall.png" alt="Link Produtos Drywall">
+                          <div class="carousel-caption">
+                            <h5>Drywall</h5>
+                          </div>
                         </a>
                       </div>
                     </div>
@@ -165,8 +112,11 @@
                 <div class="carousel-item col-md-3 ">
                    <div class="panel panel-default">
                       <div class="panel-thumbnail">
-                        <a href="#" title="image 3" class="thumb">
-                         <img class="img-fluid mx-auto d-block" src="imgs/armstrong.jpg" alt="slide 2">
+                        <a href="#" title="Divisórias" class="thumb">
+                         <img class="img-fluid mx-auto d-block" src="imgs/divisórias.png" alt="Link Produtos Divisórias">
+                        <div class="carousel-caption">
+                            <h5>Divisórias</h5>
+                        </div>
                         </a>
                       </div>
                     </div>
@@ -174,8 +124,47 @@
                 <div class="carousel-item col-md-3 ">
                    <div class="panel panel-default">
                       <div class="panel-thumbnail">
-                        <a href="#" title="image 4" class="thumb">
-                         <img class="img-fluid mx-auto d-block" src="imgs/trademixx.png" alt="slide 3">
+                        <a href="#" title="Forro" class="thumb">
+                         <img class="img-fluid mx-auto d-block" src="imgs/forro.png" alt="Link Produtos Forros">
+                         <div class="carousel-caption">
+                            <h5>Forros</h5>
+                        </div>
+                        </a>
+                      </div>
+                    </div>
+                </div>
+                <div class="carousel-item col-md-3 ">
+                    <div class="panel panel-default">
+                      <div class="panel-thumbnail">
+                        <a href="#" title="Persianas" class="thumb">
+                         <img class="img-fluid mx-auto d-block" src="imgs/persiana.png" alt="Link Produtos Persianas">
+                         <div class="carousel-caption">
+                            <h5>Persianas</h5>
+                        </div>
+                        </a>
+                      </div>
+                    </div>
+                </div>
+                <div class="carousel-item col-md-3 ">
+                    <div class="panel panel-default">
+                      <div class="panel-thumbnail">
+                        <a href="#" title="Portas" class="thumb">
+                         <img class="img-fluid mx-auto d-block" src="imgs/portas.png" alt="Link Produtos Portas">
+                         <div class="carousel-caption">
+                            <h5>Portas</h5>
+                        </div>
+                        </a>
+                      </div>
+                    </div>
+                </div>
+                <div class="carousel-item col-md-3 ">
+                    <div class="panel panel-default">
+                      <div class="panel-thumbnail">
+                        <a href="#" title="Pisos" class="thumb">
+                         <img class="img-fluid mx-auto d-block" src="imgs/piso.png" alt="Link Produtos Piso">
+                         <div class="carousel-caption">
+                            <h5>Pisos</h5>
+                        </div>
                         </a>
                       </div>
                     </div>
@@ -184,7 +173,16 @@
                     <div class="panel panel-default">
                       <div class="panel-thumbnail">
                         <a href="#" title="image 5" class="thumb">
-                         <img class="img-fluid mx-auto d-block" src="imgs/real-persianas.png" alt="slide 4">
+                         <img class="img-fluid mx-auto d-block" src="imgs/persiana.png" alt="slide 4">
+                        </a>
+                      </div>
+                    </div>
+                </div>
+                <div class="carousel-item col-md-3 ">
+                    <div class="panel panel-default">
+                      <div class="panel-thumbnail">
+                        <a href="#" title="image 5" class="thumb">
+                         <img class="img-fluid mx-auto d-block" src="imgs/persiana.png" alt="slide 4">
                         </a>
                       </div>
                     </div>
@@ -198,10 +196,36 @@
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="sr-only">Next</span>
             </a>
-        </div>-->
-
+        </div>
     </section>
-
+    <hr>
+    <section class="area3">
+        <div class="row">
+        <h1 class=" text-uppercase col-md-12">Nossos Parceiros</h1>
+        </div>
+        <div class="row">
+            <div class="col-md-3 col-6">
+                <a href="http://www.eucatex.com.br/pt/" target="blank" title="Página da Eucatex">
+                    <img class="img-fluid" src="imgs/eucatex.png" alt="Logo e link da empresa Eucatex">
+                </a>
+            </div>
+            <div class="col-md-3 col-6">
+                <a href="https://www.trademixx.com.br/" target="blank" title="Página da Armstrong">
+                    <img class="img-fluid" src="imgs/armstrong.jpg" alt="Logo e link da empresa Armstrong">
+                </a>
+            </div>
+            <div class="col-md-3 col-6">
+                <a href="https://www.trademixx.com.br/" target="blank" title="Página da Trademixx">
+                    <img class="img-fluid" src="imgs/trademixx.png" alt="Logo e link da empresa Trademixx">
+                </a>
+            </div>
+            <div class="col-md-3 col-6">
+                <a href="http://www.persianasreal.com.br/index.php?opcao=empresa" target="blank" title="Página da Real Persianas">
+                    <img class="img-fluid" src="imgs/real-persianas.png" alt="Logo e link da empresa Real Persianas">
+                </a>
+            </div>
+        </div>
+    </section>
     <hr>
     <section>
         <div class="row">
