--- a/Dist-C2/index.html
+++ b/Dist-C2/index.html
@@ -46,7 +46,7 @@
                 <a class="nav-link link2"><i class="fas fa-clipboard-list"></i> Produtos</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link link3"><i class="far fa-handshake"></i> Nossos Parceiros</a>
+                <a class="nav-link link3"><i class="far fa-handshake"></i> Fornecedores</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link link4"><i class="fas fa-bullhorn"></i> Contato</a>
@@ -93,7 +93,7 @@
 
     <hr>
     <section class="area2">
-    <h1 class="text-uppercase">Nossos produtos</h1>
+    <h1 class="text-uppercase">Produtos</h1>
     <!--Bootstrap Carroussel parceiros-->
     <div id="carouselExample" class="carousel slide" data-ride="carousel" data-interval="9000">
             <div class="carousel-inner row w-100 mx-auto" role="listbox">
@@ -201,7 +201,7 @@
     <hr>
     <section class="area3">
         <div class="row">
-        <h1 class=" text-uppercase col-md-12">Nossos Parceiros</h1>
+        <h1 class=" text-uppercase col-md-12"> Fornecedores</h1>
         </div>
         <div class="row">
             <div class="col-md-3 col-6">
