--- a/Dist-C2/index.html
+++ b/Dist-C2/index.html
@@ -94,14 +94,14 @@
     <hr>
     <section class="area2">
     <h1 class="text-uppercase">Produtos</h1>
-    <!--Bootstrap Carroussel parceiros-->
+    <!--Bootstrap Carroussel produtos-->
     <div id="carouselExample" class="carousel slide" data-ride="carousel" data-interval="9000">
             <div class="carousel-inner row w-100 mx-auto" role="listbox">
                 <div class="carousel-item col-md-3 active">
                    <div class="panel panel-default">
                       <div class="panel-thumbnail">
                         <a href="#" title="Drywall" class="thumb">
-                          <img class="img-fluid mx-auto d-block" src="imgs/drywall.png" alt="Link Produtos Drywall">
+                          <img class="img-fluid mx-auto d-block" src="imgs/produtos/drywall.png" alt="Link Produtos Drywall">
                           <div class="carousel-caption">
                             <h5>Drywall</h5>
                           </div>
@@ -113,7 +113,7 @@
                    <div class="panel panel-default">
                       <div class="panel-thumbnail">
                         <a href="#" title="Divisórias" class="thumb">
-                         <img class="img-fluid mx-auto d-block" src="imgs/divisórias.png" alt="Link Produtos Divisórias">
+                         <img class="img-fluid mx-auto d-block" src="imgs/produtos/divisórias.png" alt="Link Produtos Divisórias">
                         <div class="carousel-caption">
                             <h5>Divisórias</h5>
                         </div>
@@ -125,7 +125,7 @@
                    <div class="panel panel-default">
                       <div class="panel-thumbnail">
                         <a href="#" title="Forro" class="thumb">
-                         <img class="img-fluid mx-auto d-block" src="imgs/forro.png" alt="Link Produtos Forros">
+                         <img class="img-fluid mx-auto d-block" src="imgs/produtos/forro.png" alt="Link Produtos Forros">
                          <div class="carousel-caption">
                             <h5>Forros</h5>
                         </div>
@@ -137,7 +137,7 @@
                     <div class="panel panel-default">
                       <div class="panel-thumbnail">
                         <a href="#" title="Persianas" class="thumb">
-                         <img class="img-fluid mx-auto d-block" src="imgs/persiana.png" alt="Link Produtos Persianas">
+                         <img class="img-fluid mx-auto d-block" src="imgs/produtos/persiana.png" alt="Link Produtos Persianas">
                          <div class="carousel-caption">
                             <h5>Persianas</h5>
                         </div>
@@ -149,7 +149,7 @@
                     <div class="panel panel-default">
                       <div class="panel-thumbnail">
                         <a href="#" title="Portas" class="thumb">
-                         <img class="img-fluid mx-auto d-block" src="imgs/portas.png" alt="Link Produtos Portas">
+                         <img class="img-fluid mx-auto d-block" src="imgs/produtos/portas.png" alt="Link Produtos Portas">
                          <div class="carousel-caption">
                             <h5>Portas</h5>
                         </div>
@@ -161,7 +161,7 @@
                     <div class="panel panel-default">
                       <div class="panel-thumbnail">
                         <a href="#" title="Pisos" class="thumb">
-                         <img class="img-fluid mx-auto d-block" src="imgs/piso.png" alt="Link Produtos Piso">
+                         <img class="img-fluid mx-auto d-block" src="imgs/produtos/piso.png" alt="Link Produtos Piso">
                          <div class="carousel-caption">
                             <h5>Pisos</h5>
                         </div>
@@ -172,8 +172,11 @@
                 <div class="carousel-item col-md-3 ">
                     <div class="panel panel-default">
                       <div class="panel-thumbnail">
-                        <a href="#" title="image 5" class="thumb">
-                         <img class="img-fluid mx-auto d-block" src="imgs/persiana.png" alt="slide 4">
+                        <a href="#" title="Rodapés" class="thumb">
+                         <img class="img-fluid mx-auto d-block" src="imgs/produtos/rodape.png" alt="slide 4">
+                         <div class="carousel-caption">
+                            <h5>Rodapés</h5>
+                        </div>
                         </a>
                       </div>
                     </div>
@@ -181,8 +184,11 @@
                 <div class="carousel-item col-md-3 ">
                     <div class="panel panel-default">
                       <div class="panel-thumbnail">
-                        <a href="#" title="image 5" class="thumb">
-                         <img class="img-fluid mx-auto d-block" src="imgs/persiana.png" alt="slide 4">
+                        <a href="#" title="Painel Wall" class="thumb">
+                         <img class="img-fluid mx-auto d-block" src="imgs/produtos/painelWall.png" alt="slide 4">
+                         <div class="carousel-caption">
+                            <h5>Painel Wall</h5>
+                        </div>
                         </a>
                       </div>
                     </div>
@@ -203,25 +209,45 @@
         <div class="row">
         <h1 class=" text-uppercase col-md-12"> Fornecedores</h1>
         </div>
-        <div class="row">
+        <div class="row text-center">
             <div class="col-md-3 col-6">
                 <a href="http://www.eucatex.com.br/pt/" target="blank" title="Página da Eucatex">
-                    <img class="img-fluid" src="imgs/eucatex.png" alt="Logo e link da empresa Eucatex">
+                    <img class="img-fluid" src="imgs/fornecedores/eucatex.png" alt="Logo e link da empresa Eucatex">
                 </a>
             </div>
             <div class="col-md-3 col-6">
-                <a href="https://www.trademixx.com.br/" target="blank" title="Página da Armstrong">
-                    <img class="img-fluid" src="imgs/armstrong.jpg" alt="Logo e link da empresa Armstrong">
+                <a href="https://www.armstrongceilings.com/" target="blank" title="Página da Armstrong">
+                    <img class="img-fluid" src="imgs/fornecedores/armstrong.png" alt="Logo e link da empresa Armstrong">
                 </a>
             </div>
             <div class="col-md-3 col-6">
                 <a href="https://www.trademixx.com.br/" target="blank" title="Página da Trademixx">
-                    <img class="img-fluid" src="imgs/trademixx.png" alt="Logo e link da empresa Trademixx">
+                    <img class="img-fluid" src="imgs/fornecedores/trademixx.png" alt="Logo e link da empresa Trademixx">
                 </a>
             </div>
             <div class="col-md-3 col-6">
-                <a href="http://www.persianasreal.com.br/index.php?opcao=empresa" target="blank" title="Página da Real Persianas">
-                    <img class="img-fluid" src="imgs/real-persianas.png" alt="Logo e link da empresa Real Persianas">
+                <a href="https://www.persianascolumbia.com.br/" target="blank" title="Página da Columbia Persianas">
+                    <img class="img-fluid" src="imgs/fornecedores/columbia.png" alt="Logo e link da empresa Columbia">
+                </a>
+            </div>
+            <div class="col-md-3 col-6">
+                <a href="https://www.santaluziamolduras.com.br/" target="blank" title="Página da Santa Luzia">
+                    <img class="img-fluid" src="imgs/fornecedores/santa_luzia.png" alt="Logo e link da empresa Santa Luzia">
+                </a>
+            </div>
+            <div class="col-md-3 col-6">
+                <a href="http://www.decorlit.com.br/" target="blank" title="Página da Decorlit">
+                    <img class="img-fluid" src="imgs/fornecedores/decorlit.png" alt="Logo e link da empresa Decorlit">
+                </a>
+            </div>
+            <div class="col-md-3 col-6">
+                <a href="https://www.placo.com.br/" target="blank" title="Página da Placo">
+                    <img class="img-fluid" src="imgs/fornecedores/placo.png" alt="Logo e link da empresa Placo">
+                </a>
+            </div>
+            <div class="col-md-3 col-6">
+                <a href="https://www.belgotex.com.br/" target="blank" title="Página da Belgotex">
+                    <img class="img-fluid" src="imgs/fornecedores/belgotex.png" alt="Logo e link da empresa Placo">
                 </a>
             </div>
         </div>
